# wse-gui

./: .buildinfo  .coverage  .env_example  .gitignore  .pydeps  .pylintrc  CHANGELOG  LICENSE  Makefile  README.md  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js
.github/workflows/: docs.yml  linter.yml  pytest.yml  ruff.yml
_sources/: index.rst.txt
docs/refactoring-legacy/: refactoring_plan.md
docs/source/: conf.py  index.rst
docs/source/errors/: index.rst
docs/source/features/: index.rst  page.rst
docs/source/git/: commit.rst  index.rst
docs/source/guid/: container.rst  index.rst  view.rst
docs/source/install/: development.rst
docs/source/overview/: index.rst
docs/source/problems/: index.rst
docs/source/reference/: index.rst  navigation.rst
docs/source/reference/auth/: index.rst  schema.rst  service.rst
docs/source/reference/containers/: container.rst  index.rst  mixins.rst
docs/source/reference/style_and_thema/: define.rst  index.rst
docs/source/shared/: base.rst  index.rst
docs/source/style/: index.rst
docs/source/tutorial/: di.rst  index.rst  navigation.rst  simple_page.rst  view.rst
docs/source/typing/: index.rst  protocols.rst
src/: example.py
src/tests/: conftest.py  test_goto_handler.py  test_login.py  test_logout.py  test_selecton.py  test_start_app.py  test_to_source.py  utils.py
src/tests/fixtures/: pagination_foreign_center.json  pagination_foreign_first.json  pagination_foreign_last.json  pagination_glossary_center.json  pagination_glossary_first.json  pagination_glossary_last.json  params_foreign.json  response_glossary_list.json
src/tests/pages/: test_common_create.py  test_exercise_widgets.py  test_main.py  test_params_foreign.py  test_params_handlers.py  test_params_widget.py
src/tests/pages/foreign/: test_create.py  test_list.py  test_list_pagination.py  test_main.py
src/tests/pages/glossary/: test_create.py  test_list.py  test_list_pagination.py  test_main.py  test_params_handlers.py
src/tests/source/: test_params.py  test_source_user.py  test_user.py
src/wse/: __init__.py  __main__.py  app.py  container.py  di_container.py  factory.py  main.py  menu.py  types.py
src/wse/api/: di_module.py  responses.py
src/wse/api/base/: __init__.py  exercise.py
src/wse/api/foreign/: __init__.py  abc.py  params.py  presentation.py  progress.py  requests.py  responses.py  schemas.py  study.py
src/wse/api/glossary/: __init__.py  abc.py  responses.py  schemas.py  study.py  term.py
src/wse/api/main/: __init__.py  abc.py  assignations.py  assigned.py  data.py  exercise.py  (+1 more)
src/wse/application/: app.py  app_hub.py
src/wse/apps/: README.txt  di_module.py  nav_id.py  routes.py
src/wse/config/: __init__.py  api.py  api_paths.py  config.py  di_module.py  endpoints.yml  enums.py  interfaces.py  language.env  layout.py  logging.json  logging_config.json  settings.py  styles.py
src/wse/constants/: __init__.py  settings.py  url.py
src/wse/container/: exercise.py  params.py
src/wse/containers/: exercise.py  params.py  progress.py
src/wse/contr/: __init__.py  exercise.py  form.py  main.py  table.py  testing.py
src/wse/contrib/: data.py  factory.py  http_requests.py  navigation.py  singelton.py  timer.py  utils.py
src/wse/controllers/: __init__.py  base.py  calculations.py  exercise.py  form.py  main.py  multiplication.py  nav.py  navigation.py  params.py  selected.py  table.py  testing.py
src/wse/core/: __init__.py  app.py  base.py  config.py  container.py  di_container.py  di_module.py  di_modules.py  exceptions.py  i18n.py  logger.py  settings.py
src/wse/data/: __init__.py  di_module.py  task_data.py
src/wse/di/: __init__.py  injector.py
src/wse/domain/: __init__.py  abc.py  assigned.py  di_module.py  math_exercise.py  math_task.py  presentation.py  presenter.py  protocol.py  task.py  task_logic.py  user.py
src/wse/feature/: __init__.py  audit.py  di_module.py
src/wse/features/: __init__.py  _types.py  container.py  di_container.py  exceptions.py  obj_test_id.py  object_id.py  settings.py  text.py  ui_config.py
src/wse/handlers/: goto_handler.py
src/wse/interface/: iconfig.py  icore.py  idi_container.py  iexercise.py  ifeatures.py  ikeypad.py  imain.py  imathem.py  iobserver.py
src/wse/interfaces/: __init__.py  iapi.py  iauth.py  iconfig.py  icontroller.py  icore.py  iexercise.py  iobserver.py  iservices.py  iview.py
src/wse/model/: __init__.py  main.py
src/wse/models/: __init__.py  main.py  task.py  user.py
src/wse/page/: __init__.py  base.py  foreign.py  glossary.py  login.py  main.py  mathematics.py  mentoring.py
src/wse/pages/: __init__.py  base.py  explorer.py  foreign.py  glossary.py  login.py  main.py  mathematics.py  mentoring.py
src/wse/source/: items.py  number_input.py  params.py  selection.py  switch.py  text_panel_main.py  user.py
src/wse/sources/: exercise.py  foreign.py  form.py  glossary.py  number_input.py  source_list.py  switch.py  text_panel_main.py  user.py
src/wse/ui/: __init__.py  content.py  di_module.py  routes.py
src/wse/utils/: __init__.py  contextmanager.py  contextmanagers.py  decorators.py  generate_secret_key.py  i18n.py  interfaces.py  loader.py  logger.py
src/wse/widgets/: box.py  box_page.py  button.py  form.py  label.py  message.py  number_input.py  selection.py  switch.py  table.py
src/wse_gui/: __main__.py  app.py
tests/: conftest.py  test_app.py  test_page_home.py  test_start_app.py  test_startapp.py  types.py  utils.py  wse.py  wse_gui.py
tests/fixtures/foreign/: __init__.py  parameters.py  params.py  repos.py  sources.py
tests/integraion/foreign/: __init__.py
tests/unit/: __init__.py  conftest.py
tests/unit/api/: __init__.py  conftest.py
tests/unit/core/: __init__.py  test_navigator.py
tests/unit/data/: __init__.py  conftest.py
tests/unit/domain/: __init__.py  test_presentation.py
tests/unit/features/: __init__.py
tests/unit/http/: __init__.py  conftest.py
tests/unit/ui/: conftest.py
(+1029 files in other folders)
