# This project was generated with 0.3.19 using template: https://github.com/beeware/briefcase-template@v0.3.19
[tool.briefcase]
project_name = "WSE GUI"
bundle = "online.wselfedu"
version = "0.1.1"
url = "http://wselfedu.online"
license.file = "LICENSE"
author = "Sergei Mikurov"
author_email = "454004@mail.ru"

[tool.briefcase.app.wse]
formal_name = "WSE GUI"
description = "WSE GUI Toga app"
long_description = """More details about the app should go here.
"""
sources = [
    "src/wse",
]
test_sources = [
    "tests",
]

requires = [
    "httpx==0.27.2",
    "dependency-injector~=4.46.0",
    "pydantic~=2.11.3",
    "pydantic-settings~=2.8.1",
    "cryptography~=44.0.2"
]
test_requires = [
    "pytest",
]

[tool.briefcase.app.wse.macOS]
universal_build = true
requires = [
    "toga-cocoa~=0.4.5",
    "std-nslog~=1.0.0",
]

[tool.briefcase.app.wse.linux]
requires = [
    "toga-gtk~=0.4.5",
]

[tool.briefcase.app.wse.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    # Needed to compile PyGObject wheel
    "libgirepository1.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK and its GI bindings
    "gir1.2-gtk-3.0",
    "libgirepository-1.0-1",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    # Note: Debian 11 and Ubuntu 20.04 require gir1.2-webkit2-4.0 instead
    # "gir1.2-webkit2-4.1",
]

[tool.briefcase.app.wse.linux.system.rhel]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to support Python bindings to GTK
    "gobject-introspection",
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk3",
]

[tool.briefcase.app.wse.linux.system.suse]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to support Python bindings to GTK
    "gobject-introspection", "typelib(Gtk) = 3.0",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    # "libwebkit2gtk3", "typelib(WebKit2)",
]

[tool.briefcase.app.wse.linux.system.arch]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo",
    # Needed to compile PyGObject wheel
    "gobject-introspection",
    # Runtime dependencies that need to exist so that the
    # Arch package passes final validation.
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2
    # "webkit2gtk",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to provide PyGObject bindings
    "gobject-introspection-runtime",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk",
]

[tool.briefcase.app.wse.linux.appimage]
manylinux = "manylinux_2_28"

system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
    # Needed to provide GTK
    "gtk3-devel",
    # Dependencies that GTK looks for at runtime, that need to be
    # in the build environment to be picked up by linuxdeploy
    "libcanberra-gtk3",
    "PackageKit-gtk3-module",
    "gvfs-client",
]

linuxdeploy_plugins = [
    "DEPLOY_GTK_VERSION=3 gtk",
]

[tool.briefcase.app.wse.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "45"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.wse.windows]
requires = [
    "toga-winforms~=0.4.5",
]

# Mobile deployments
[tool.briefcase.app.wse.iOS]
requires = [
    "toga-iOS~=0.4.5",
    "std-nslog~=1.0.0",
]

[tool.briefcase.app.wse.android]
requires = [
    "toga-android~=0.4.5",
]

base_theme = "Theme.MaterialComponents.Light.DarkActionBar"

build_gradle_dependencies = [
    "com.google.android.material:material:1.11.0",
    # Needed for DetailedList
    # "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
    # Needed for MapView
    # "org.osmdroid:osmdroid-android:6.1.0",
]

# Web deployments
[tool.briefcase.app.wse.web]
requires = [
    "toga-web~=0.4.5",
]
style_framework = "Shoelace v2.3"

# Poetry
[tool.poetry]
name = "WSE"
version = "0.1.1"
description = "Application for educational exercises on various subjects"
authors = ["Sergei Mikurov <454004@mail.ru>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
httpx = "0.27.2"
dependency-injector = "^4.46.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"
cryptography = "^44.0.2"
pyyaml = "^6.0.2"
toga-dummy = "0.4.9"
toga = "0.4.9"

[tool.poetry.group.dev.dependencies]
briefcase = "0.3.19"
pygobject = "3.50.0"
travertino = "0.3.0"
pillow = "11.0.0"

[tool.poetry.group.tests.dependencies]
pytest-asyncio = "^0.26.0"

[tool.poetry.group.code-qaulity.dependencies]
pylint = "^3.3.6"
radon = "^6.0.1"
pydeps = "^3.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages]
find = {where = ["src"]}

# Ruff linter
[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
exclude = [
    ".github/*",
    ".idea/*",
    ".venv*",
    "docs",
    "*/conftest.py",
]
line-length = 79

[tool.ruff.lint.per-file-ignores]
"src/wse/features/examples/*.py" = [
    "ANN001", "ANN003", "ANN201", "ANN202", "ANN204",
    "D100", "D101", "D102", "D107", "D105",
    "E501",
    "W505",
]
"*/interfaces/*.py" = [
    "D101", "D102", 'D204',
    "E301", "E302"
]

[tool.ruff.lint]
preview = true  # checks will include unstable rules and fixes
select = [
    "F",    # pyflakes: https://pypi.org/project/pyflakes/
    "E",    # pycodestyle: Error; pycodestyle: https://pypi.org/project/pycodestyle/
    "W",    # pycodestyle: Warning
    "I",    # isort: https://pypi.org/project/isort/
    "N",    # pep8-naming: https://pypi.org/project/pep8-naming/
    "D",    # pydocstyle: https://pypi.org/project/pydocstyle/
    "B",    # flake8-bugbear: https://pypi.org/project/flake8-bugbear/
    "C90",  # mccabe: https://pypi.org/project/mccabe/
    "ANN",  # flake8-annotations: https://pypi.org/project/flake8-annotations/
    "Q",    # flake8-quotes: https://pypi.org/project/flake8-quotes/
]
ignore = [
    "D203",     # 1 blank line required before class docstring
    "D211",     # No blank lines allowed before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D416",     # Section name should end with a colon
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
